# otel-demo

./: README.md  local.env  pyproject.toml
alloy/: .gitignore  config.alloy
data-alloy/: alloy_seed.json
src/otel_demo/apps/: __main__.py  client.py  models.py  producer.py  propagator.py
src/otel_demo/exporter/: __init__.py  __main__.py  tables.py
src/otel_demo/utils/: base.py  faststream.py  litestar.py
